--- a/todo/src/main/resources/application.properties
+++ b/todo/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.application.name=project2
+spring.application.name=todo
 
 # database 정보
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=c##jpauser
+spring.datasource.username=c##java
 spring.datasource.password=12345
 
 # jpa 설정
@@ -13,8 +13,3 @@ spring.datasource.password=12345
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-
-
-
-server.port=8090
