--- a/project2/src/main/resources/application.properties
+++ b/project2/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=project2
 # database 정보
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=c##jpauser
+spring.datasource.username=c##java
 spring.datasource.password=12345
 
 # jpa 설정
@@ -17,4 +17,3 @@ spring.jpa.properties.hibernate.format_sql=true
 
 
 
-server.port=8090
