--- a/project2/pom.xml
+++ b/project2/pom.xml
@@ -68,8 +68,23 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
 
+<dependency>
+    <groupId>com.querydsl</groupId>
+    <artifactId>querydsl-jpa</artifactId>
+    <version>5.1.0</version>
+	<classifier>jakarta</classifier>
+</dependency>
+
+<dependency>
+    <groupId>com.querydsl</groupId>
+    <artifactId>querydsl-apt</artifactId>
+    <version>5.1.0</version>
+	<classifier>jakarta</classifier>
+</dependency>
+
+
+	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
