--- a/book/pom.xml
+++ b/book/pom.xml
@@ -72,6 +72,19 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+				<dependency>
+    <groupId>com.querydsl</groupId>
+    <artifactId>querydsl-jpa</artifactId>
+    <version>5.1.0</version>
+	<classifier>jakarta</classifier>
+</dependency>
+
+<dependency>
+    <groupId>com.querydsl</groupId>
+    <artifactId>querydsl-apt</artifactId>
+    <version>5.1.0</version>
+	<classifier>jakarta</classifier>
+	</dependency>
 	</dependencies>
 
 	<build>
