--- a/movie/src/main/resources/application.properties
+++ b/movie/src/main/resources/application.properties
@@ -15,21 +15,22 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # 로그레벨
-logging.level.com.example.movie=debug
-logging.level.org.springframework.security.web=trace
+# logging.level.com.example.movie=debug
+# logging.level.org.springframework.security.web=trace
 
 # thymeleaf
 spring.thymeleaf.cache=false
 
 # 파일 업로드
 # 서블릿 기능을 활용해 파일 업로드 
-spring.servlet.multipart.enabled=true
-# 파일 저장 경로
-spring.servlet.multipart.location=upload
-# 파일 업로드 가능 크기
+spring.servlet.multipart.enabled=true  
+# 파일 임시 저장 경로
+# spring.servlet.multipart.location=upload
+# 최대 업로드 가능 크기
 spring.servlet.multipart.max-request-size=30MB
 # 파일 하나의 최대 허용 크기
 spring.servlet.multipart.max-file-size=10MB
 
-# 실제 경로
+# 파일 실제 저장 경로
 com.example.movie.upload.path = upload
+
