--- a/book/src/main/resources/application.properties
+++ b/book/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=book
 # database 정보
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=c##java
+spring.datasource.username=c##jpauser
 spring.datasource.password=12345
 
 # jpa 설정
