--- a/mybatis/src/main/resources/application.properties
+++ b/mybatis/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=mybatis
 
+
 # database 정보
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=c##java
+spring.datasource.username=c##jpauser
 spring.datasource.password=12345
 
 # jpa 설정
